[project]
name = "any2pdf"
version = "0.0.0"
description = "문서 변환 파이프라인 GUI 및 CLI 실행 환경"
requires-python = ">=3.10"
dependencies = [
  "python-docx>=1.1.0",
  "markdown>=3.7",
  "beautifulsoup4>=4.12.0",
  "pyhwp>=0.1b15",
  "six>=1.16.0",
]

[project.scripts]
any2pdf-gui = "gui:main"
any2pdf-cli = "any2pdf.any2pdf:main"
md2docx-cli = "md2docx.md_to_docx:main"
hwp2docx-cli = "hwp2docx.hwp_to_docx:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gui"]
packages = ["any2pdf", "md2docx", "hwp2docx"]
